gnome-shell (3.28.1-1) UNRELEASED; urgency=medium

  * New upstream release
  * Bump required glib to 2.56. Thanks Marcus Lundblad.
  * debian/gnome-shell.gsettings-overrides:
    Adapt favorite-apps to the renaming of Evolution's .desktop

 -- Jeremy Bicha <jbicha@debian.org>  Mon, 19 Mar 2018 16:51:53 -0400

gnome-shell (3.28.0-1) unstable; urgency=medium

  [ Simon McVittie ]
  * New upstream stable release

 -- Jeremy Bicha <jbicha@debian.org>  Sun, 18 Mar 2018 20:16:20 -0400

gnome-shell (3.27.92-2) unstable; urgency=medium

  [ Simon McVittie ]
  * Build-depend on libgnome-desktop-3-dev (>= 3.27.90) to carry out
    libgnome-desktop-3-17 transition in experimental
  * Tighten dependencies on mutter and gir1.2-gnomedesktop-3.0

  [ Jeremy Bicha ]
  * Release to unstable

 -- Jeremy Bicha <jbicha@debian.org>  Sat, 10 Mar 2018 19:36:09 -0500

gnome-shell (3.27.92-1) experimental; urgency=medium

  * New upstream release candidate
  * Drop bump-api.patch: Applied in new release

 -- Jeremy Bicha <jbicha@debian.org>  Mon, 05 Mar 2018 20:51:14 -0500

gnome-shell (3.27.91-1) experimental; urgency=medium

  * New upstream development release (LP: #1751070)
  * Bump minimum mutter to 3.27.91
  * Build-Depend on sassc
  * Drop caribou dependencies. GNOME Shell has a new built-in keyboard now.
  * Drop patches applied in new release
  * Cherry-pick bump-api.patch
  * Disable the 6 patches from merge request !4 since they need to
    be rebased

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 23 Feb 2018 18:45:14 -0500

gnome-shell (3.26.2-5) experimental; urgency=medium

  * Team upload
  * Cherry-pick two more patches from upstream gnome-3-26 branch
    related to #881301 etc. (now at 3.26.2-14-g64c857e3f)
  * Apply patches from upstream merge request !4 to address more uses
    of destroyed objects (Closes: #887082, hopefully)

 -- Simon McVittie <smcv@debian.org>  Fri, 26 Jan 2018 17:10:10 +0000

gnome-shell (3.26.2-4) unstable; urgency=medium
